--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,33 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+echo "      execSync('sudo service tor stop');  // Stop Tor after closing the browser" >> continuous_visit_puppeteer.js
+          echo "      console.log('Tor stopped after visiting the website.');" >> continuous_visit_puppeteer.js
+          echo "    } catch (error) {" >> continuous_visit_puppeteer.js
+          echo "      console.error('Failed to visit website:', error.message);" >> continuous_visit_puppeteer.js
+          echo "      if (browser) await browser.close();" >> continuous_visit_puppeteer.js
+          echo "      await restartTor(); // Restart Tor if navigation fails" >> continuous_visit_puppeteer.js
+          echo "    }" >> continuous_visit_puppeteer.js
+          echo "  }" >> continuous_visit_puppeteer.js
+          echo "}" >> continuous_visit_puppeteer.js
+          echo "" >> continuous_visit_puppeteer.js
+          echo "async function randomWait() {" >> continuous_visit_puppeteer.js
+          echo "  const waitTime = Math.floor(Math.random() * (5 - 2 + 1) + 2) * 60 * 1000;  // Random wait between 2 to 5 minutes" >> continuous_visit_puppeteer.js
+          echo "  console.log('Waiting for', waitTime / 60000, 'minutes before next visit...');" >> continuous_visit_puppeteer.js
+          echo "  await new Promise(resolve => setTimeout(resolve, waitTime));" >> continuous_visit_puppeteer.js
+          echo "}" >> continuous_visit_puppeteer.js
+          echo "" >> continuous_visit_puppeteer.js
+          echo "async function fetchIPsAndVisit() {" >> continuous_visit_puppeteer.js
+          echo "  await fetchIP(false);  // Fetch IP without Tor" >> continuous_visit_puppeteer.js
+          echo "  await fetchIPWithTorRetry();  // Fetch IP with Tor, retry until successful" >> continuous_visit_puppeteer.js
+          echo "  while (true) {" >> continuous_visit_puppeteer.js
+          echo "    execSync('sudo service tor start');  // Start Tor before each visit" >> continuous_visit_puppeteer.js
+          echo "    console.log('Tor started before visiting the website.');" >> continuous_visit_puppeteer.js
+          echo "" >> continuous_visit_puppeteer.js
+          echo "    await fetchIP(true);  // Show public IP after starting Tor" >> continuous_visit_puppeteer.js
+          echo "    await visitWebsite('https://dileepa2.netlify.app');" >> continuous_visit_puppeteer.js
+          echo "    await randomWait();" >> continuous_visit_puppeteer.js
+          echo "  }" >> continuous_visit_puppeteer.js
+          echo "}" >> continuous_visit_puppeteer.js
+          echo "" >> continuous_visit_puppeteer.js
+          echo "fetchIPsAndVisit();" >> continuous_visit_puppeteer.js
+          
+      - name: Run Puppeteer Script
+        run: node continuous_visit_puppeteer.js
